# acts_ks2_collector

./: .gitignore  Cargo.toml  build.rs  example.xlsm  f.xlsm  f@.xlsm  readme.md
src/: config.rs  constants.rs  error.rs  errors.rs  extract.rs  lib.rs  load.rs  main.rs  output_data.rs  transform.rs  types.rs  ui.rs
src/extract/: act.rs  books.rs  mod.rs  sheet.rs  tags.rs
src/extract/shared/: mod.rs  types.rs
src/extract/sheet/: mod.rs  verify.rs
src/shared/: constants.rs  types.rs  utils.rs
поиск/: f — копия.xlsm
