[package]
name = "ks2_etl"
version = "1.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "*"

[dependencies]
calamine = "*"
xlsxwriter = "*"
console = "*"
itertools = "*"
regex = "*" #используется в load.rs
walkdir = "*"
dialoguer = "*"

[profile.release]
opt-level = 3
lto = true
debug = false